--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
 		"lint": "prettier --check . && eslint .",
 		"format": "prettier --write .",
 		"test:pw": "playwright test",
-		"test:vi": "vitest run"
+		"test:vi": "vitest run",
+		"cucumber": "clear && npx @cucumber/cucumber"
 	},
 	"devDependencies": {
+		"@cucumber/cucumber": "^10.3.1",
 		"@playwright/test": "^1.28.1",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
@@ -30,6 +32,7 @@
 		"prettier-plugin-svelte": "^3.1.2",
 		"svelte": "^4.2.7",
 		"svelte-jester": "^3.0.0",
+		"tree-kill-promise": "^3.0.14",
 		"vite": "^5.0.3",
 		"vitest": "^1.3.1"
 	},
